# Haskell-Pride-Network-Wide

./: CHANGELOG.md  Haskell-Pride-Network-Wide.cabal  README.org  cabal.nix  shell.nix
app/: External.hs  Game.hs  Main.hs
