cabal-version:      3.0
name:               Haskell-Pride-Network-Wide
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable HPNW
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: External, Game

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: ImportQualifiedPost

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1, lens, split, array, bytestring, network
                 ,    optparse-applicative

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
